--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Franz 'n Steve's Magical Auctions</title>
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/styles.css">
     <script src="libs/jquery-1.11.1.js"></script>
     <script src="libs/ember-template-compiler-1.10.0.js"></script>
     <script src="libs/ember-debug.js"></script>
@@ -30,7 +31,7 @@
     <!--  pages  -->
     <script>
       EmberHandlebarsLoader.loadTemplates([
-        'items', 'newItem', 'item'
+        'items', 'newItem', 'item', 'application'
       ]);
     </script>
 
